--- a/.travis.yml
+++ b/.travis.yml
@@ -39,23 +39,19 @@ python:
 script:
     - python -m tests/test
 after_success:
-    - git config --global user.email "kese111@gmail.com"
-    - git config --global user.name "ParkHanbum"
-    - git remote rm origin
-    - git remote add origin https://user:${GITHUB_TOKEN}@github.com/ParkHanbum/zigzi.git
-    - git remote -v
-    - git fetch
-    - git checkout gh-pages
     - sphinx-apidoc -F -o doc .
     - cd doc
     - make html
+    - git init
+    - git config --global user.email "kese111@gmail.com"
+    - git config --global user.name "ParkHanbum"
+    - git remote add upstream "https://${GITHUB_TOKEN}@github.com/ParkHanbum/zigzi.git"
+    - git fetch upstream
+    - git reset upstream/gh-pages
+    - git add -A .
+    - git commit -m "update page at ${rev}"
+    - git push -q upstream HEAD:gh-pages
 cache:
   - pip
   - $HOME/keystone-master
 
-deploy:
-    provider: pages
-    skip_cleanup: true
-    github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-    on:
-      branch: gh-pages
